--- a/index.html
+++ b/index.html
@@ -24,31 +24,124 @@
         <!--page 1 content-->
         <div class="homepageimg"></div>
         <div class="homepagedesc">
-            <p>The Atomic Bomb - One of the deadliest weapons ever made - Uncover its history</p>
+            <p>The Atomic Bomb - The weapon that ended World War 2 - Uncover its history</p>
         </div>
-    </div>
+    </div> <!--End of Page 1-->
     <div class="page" id="page2">
-        <!--Development content-->
-        <div class="yap">
+        <!--Development-->
+        <div class="bodytext">
             <img src="images/Manhattan_project.png" alt="The Manhattan Project" class="centered">
             <p class="centered">The first atomic bomb ever produced was by the Manhattan Project.
                 First started in December 1941, it was a research and development program led by the US in collaboration with Canada and the UK with the aim to develop nuclear weapons before Nazi Germany.
             </p>
             <P class="centered">
                 At its peak, the Manhattan Project employed nearly 130 thousand people, costing a modern equivalent of $27 Billion USD (in 2023).
-                Over 80% of the cost came from building and operating plants that produced the fissile material, and more than 30 research sites were built across the US, Canada and the UK.
+                More than 80% of the 
+                 came from building and operating plants that produced the fissile material, and more than 30 research sites were built across the US, Canada and the UK.
             </P>
+            <div class="profileNav">
+                <button class="profileBTN" id="prevProfilebtn">←</button>
+                <div class="profileContainer" id="profile1">
+                    <div class="profileTXT">
+                        <h1>J. Robert Oppenheimer</h1>
+                        <p> Julius Robert Oppenheimer was born on April 22, 1904 in New York, US.</p>
+                        <p>He was a theoretical physicist and served as the director of the Los Alamos Laboratory under the Manhattan project.</p>
+                        <p>He was responsible for the research and design of the atomic bombs that fell on Hiroshima and Nagasaki in 1945.</p>
+                    </div>
+                    <div class="profileIMG">
+                        <img src="images/Oppenheimer_(cropped).jpg" alt="Robert J. Oppenheimer" class="centered">
+                    </div>
+                </div>
+                <button class="profileBTN" id="nxtProfilebtn">→</button>
+            </div>
         </div>
-    </div>
+        <div class="divisionBar"><!--Leave Empty--></div>
+        <div class="bodytext centered">
+            <!--Talk about development of the 2 atomic bombs-->
+            <p> 
+                The "Little Boy" Bomb was a gun-type fission weapon which used Uranium-235.
+                It was reworked from a previous bomb called "Thin Man", which was also a gun-type fission weapon but proved impractical as it used plutonium-239.
+                The "Little Boy" was developed by Los Alamos Laboratory and its components were fabricated at 3 different plants to prevent anyone from having the complete design.
+            </p>
+            <P>
+                The "Fat Man" Bomb was a more complex implosion-type nuclear weapon that used plutonium-239.
+                This design used conventional explosives to compress a plutonium core into a supercritical state, which would initiate a nuclear explosion. 
+                A total of ~120 "Fat Man" Bombs were produced between 1945 to 1949 before it was retired.
+            </P>
+            <div class="bombStatContainer">
+                <img src="images/Little_boy.jpg" alt="Litte Boy Bomb" class="resize">
+                <h1>Little Boy Bomb</h1>
+                <br>
+                <div class="alignleft margin-L20">
+                    <strong>Type:</strong> Uranium gun-type bomb <br>
+                    <strong>Material:</strong> Uranium-235 <br>
+                    <strong>Yield:</strong> Approximately 15 kilotons of TNT <br>
+                    <strong>Weight:</strong> 4,400 kilograms <br>
+                    <strong>Length:</strong> 3 meters <br>
+                    <strong>Diameter:</strong> 71 centimeters <br>
+                </div>
+            </div>
+            <div class="bombStatContainer">
+                <img src="images/Fat_man.jpg" alt="Fat Man Bomb" class="resize">
+                <h1>Fat Man Bomb</h1>
+                <br>
+                <div class="alignleft margin-L20">
+                    <strong>Type:</strong> Plutonium implosion-type bomb <br>
+                    <strong>Material:</strong> Plutonium-239 <br>
+                    <strong>Yield:</strong> Approximately 21 kilotons of TNT <br>
+                    <strong>Weight:</strong> Weight: 4,670 kilograms <br>
+                    <strong>Length:</strong> 3.25 meters <br>
+                    <strong>Diameter:</strong> 1.52 meters <br>
+                </div>
+            </div>
+        </div>
+    </div> <!--End of Page 2-->
     <div class="page" id="page3">
-        <!--Usage content
-        hiroshima and nagasaki
-        -->
-    </div>
+        <div class="bodytext centered">
+            <img src="images/hiroshima.jpg" alt="impact of little boy on hiroshima" class="resizeImpact">
+            <h2>HIROSHIMA</h2>
+            <p>
+                The first ever atomic bomb to be used in war was in August 6, 1945, when the US dropped the Little boy on the japanese city of hiroshima.
+                At approximately 2:45am on 6 August, a B-29 bomber "Enola Gay" took off from a runway in Tinnian Island with a deactivated "Little Boy" bomb.
+                Almost 6 hours later at 8:15am, the "little boy" was dropped over Hiroshima, just as its residents were waking up.
+                The bomb detonated at about 580 meters above ground level, instanly killing over 10 thousand people, with another 120 thousand dying soon after.
+                It leveled two-thirds of the city with an estimated explosion force of 15 Kilotons.
+            </p>
+            <br> <br> <br> <br> <br> <br> <br> <br>
+            <img src="images/nagasaki.png" alt="impact of fat man on nagasaki" class="resizeImpact">
+            <h2>NAGASAKI</h2>
+            <p>
+                The second and last atomic bomb to be used in war was dropped on the japanese city of Nagasaki on August 9, 1945.
+                At approximately 3.47am, a B-29 bomber "Bockscar" took off from the same run way in Tinnian Island, also with a deactivated "Fat Man" bomb.
+                About 7 hours later at 11:02am, the "Fat Man" bomb was dropped over Nagasaki, where it exploded 500 meters above the ground.
+                40 thousand people were instantly killed, with at least 40 thousand more dying soon after. It leveled a portion of the city with an estimated explosion force of 21 kilotons.
+            </p>
+        </div>
+    </div> <!--End of page 3-->
     <div class="page" id="page4">
-        <!--Ethics content
-        impact on the 2 cities and the people affected
+        <!--Ethics
+        change to game
         -->
-    </div> 
+        <div class="bodytext centered">
+            <h1>Don't Die</h1>
+            <p>You are the ball, where would you go to survive the bombs?
+                <br>
+                Control with WASD, R to reset ball
+            </p>
+            <button class="confirm" id="confirmButton">Confirm</button> 
+            <div id="box">
+                <div id="ball">You</div>
+            </div>
+            <div class="city">
+                <h3><b>HIRSOHIMA</b></h3>
+            </div>
+            <div class="city">
+                <h3><b>NAGASAKI</b></h3>
+            </div>
+
+            <div id="win-message" class="gameMsg">YOU WIN</div>
+            <div id="lose-message" class="gameMsg">YOU LOSE</div> 
+        </div>
+    </div> <!--End of Page 4-->
 </body>
 </html>
