--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All about Atomic Bombs</title>
+    <title>Atomic Bombs</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
@@ -16,7 +16,7 @@
             <ul>
                 <li><button id="page2btn">Development</button></li>
                 <li><button id="page3btn">Usage</button></li>
-                <li><button id="page4btn">Ethics</button></li>
+                <li><button id="page4btn">Game</button></li>
             </ul>
         </nav>
     </div>
@@ -30,7 +30,7 @@
     <div class="page" id="page2">
         <!--Development-->
         <div class="bodytext">
-            <img src="images/Manhattan_project.png" alt="The Manhattan Project" class="centered">
+            <img src="images/manhattan_project.png" alt="The Manhattan Project" class="centered">
             <p class="centered">The first atomic bomb ever produced was by the Manhattan Project.
                 First started in December 1941, it was a research and development program led by the US in collaboration with Canada and the UK with the aim to develop nuclear weapons before Nazi Germany.
             </p>
@@ -40,7 +40,6 @@
                  came from building and operating plants that produced the fissile material, and more than 30 research sites were built across the US, Canada and the UK.
             </P>
             <div class="profileNav">
-                <button class="profileBTN" id="prevProfilebtn">←</button>
                 <div class="profileContainer" id="profile1">
                     <div class="profileTXT">
                         <h1>J. Robert Oppenheimer</h1>
@@ -49,10 +48,9 @@
                         <p>He was responsible for the research and design of the atomic bombs that fell on Hiroshima and Nagasaki in 1945.</p>
                     </div>
                     <div class="profileIMG">
-                        <img src="images/Oppenheimer_(cropped).jpg" alt="Robert J. Oppenheimer" class="centered">
+                        <img src="images/oppenheimer.jpg" alt="Robert J. Oppenheimer" class="centered">
                     </div>
                 </div>
-                <button class="profileBTN" id="nxtProfilebtn">→</button>
             </div>
         </div>
         <div class="divisionBar"><!--Leave Empty--></div>
@@ -69,7 +67,7 @@
                 A total of ~120 "Fat Man" Bombs were produced between 1945 to 1949 before it was retired.
             </P>
             <div class="bombStatContainer">
-                <img src="images/Little_boy.jpg" alt="Litte Boy Bomb" class="resize">
+                <img src="images/little_boy.jpg" alt="Litte Boy Bomb" class="resize">
                 <h1>Little Boy Bomb</h1>
                 <br>
                 <div class="alignleft margin-L20">
@@ -82,7 +80,7 @@
                 </div>
             </div>
             <div class="bombStatContainer">
-                <img src="images/Fat_man.jpg" alt="Fat Man Bomb" class="resize">
+                <img src="images/fat_man.jpg" alt="Fat Man Bomb" class="resize">
                 <h1>Fat Man Bomb</h1>
                 <br>
                 <div class="alignleft margin-L20">
@@ -140,7 +138,11 @@
             </div>
 
             <div id="win-message" class="gameMsg">YOU WIN</div>
-            <div id="lose-message" class="gameMsg">YOU LOSE</div> 
+            <div id="lose-message" class="gameMsg">YOU LOSE</div>
+            <div>
+                <img src="images/frame.png" alt="QR Code" class="qrCode">
+            </div>
+
         </div>
     </div> <!--End of Page 4-->
 </body>
